# MCP_server

./: README.md  factory.db  memory.db  pyproject.toml
apps/bot_cli/: main.py
apps/mcp_server/: server.py
domain/schemas/: ollama.py
infra/: mcp_client.py  settings.py
persistence/: db.py  memory_store.py  models.py
scripts/: seed_factory_db.py
